--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
   <title>DocToolsHub – Free Image Resiger | Image Converter | PDF Tools</title>
 
 
+<!-- Favicon -->
+<link rel="icon" href="/assets/images/doctoolshublogo.png" type="image/png">
+<link rel="apple-touch-icon" href="/assets/images/doctoolshublogo.png">
+
+<!-- Optional: For better compatibility -->
+<link rel="shortcut icon" href="/assets/images/doctoolshublogo.png" type="image/png">
+
 
   <!-- BASIC SEO -->
 <meta name="description" content="Free online document tools – Image size reducer, JPG to PDF, PDF to JPG and file converters.">
