--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
 <!-- OPEN GRAPH (Facebook, WhatsApp, LinkedIn) -->
 <meta property="og:title" content="DocToolsHub – Free Image & PDF Tools">
 <meta property="og:description" content="Resize, Compress & Convert Images and PDFs online – 100% Free">
-<meta property="og:image" content="https://yourdomain.com/assets/images/banner.png">
+<meta property="og:image" content="https://amanish07.github.io/doctoolshub/assets/images/banner.png">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://yourdomain.com">
+<meta property="og:url" content="https://amanish07.github.io/doctoolshub">
 
 <!-- TWITTER / X SEO -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="DocToolsHub – Free Image & PDF Tools">
 <meta name="twitter:description" content="Resize, Compress & Convert Images and PDFs online – 100% Free">
-<meta name="twitter:image" content="https://yourdomain.com/assets/images/banner.png">
+<meta name="twitter:image" content="https://amanish07.github.io/doctoolshub/assets/images/banner.png">
 
   <!-- CSS -->
   <link rel="stylesheet" href="assets/styles/main.css">
