--- a/index.html
+++ b/index.html
@@ -2,35 +2,30 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>DocToolsHub – Free Image Resiger | Image Converter | PDF Tools</title>
+  <title>ImageToolsOnline – Free Image Resizer | Image Converter | PDF Tools</title>
 
-
-<!-- Favicon -->
-<link rel="icon" href="assets/images/doctoolshublogo.png" type="image/png">
-<link rel="apple-touch-icon" href="assets/images/doctoolshublogo.png">
-
-<!-- Optional: For better compatibility -->
-<link rel="shortcut icon" href="assets/images/doctoolshublogo.png" type="image/png">
-
+  <!-- Favicon -->
+  <link rel="icon" href="/assets/images/ImageToolsOnlinelogo.png" type="image/png">
+  <link rel="apple-touch-icon" href="/assets/images/ImageToolsOnlinelogo.png">
+  <link rel="shortcut icon" href="/assets/images/ImageToolsOnlinelogo.png" type="image/png">
 
   <!-- BASIC SEO -->
-<meta name="description" content="Free online document tools – Image size reducer, JPG to PDF, PDF to JPG and file converters.">
-<meta name="keywords" content="image size reducer, jpg to pdf, pdf to jpg, document tools">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Free online image and PDF tools – Image size reducer, JPG to PDF, PDF to JPG and converters.">
+  <meta name="keywords" content="image size reducer, jpg to pdf, pdf to jpg, image tools online, pdf tools">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <!-- OPEN GRAPH (Facebook, WhatsApp, LinkedIn) -->
+  <meta property="og:title" content="ImageToolsOnline – Free Image & PDF Tools">
+  <meta property="og:description" content="Resize, Compress & Convert Images and PDFs online – 100% Free">
+  <meta property="og:image" content="https://amanish07.github.io/ImageToolsOnline/assets/images/ImageToolsOnlinebanner.png">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://amanish07.github.io/ImageToolsOnline/">
 
-<!-- OPEN GRAPH (Facebook, WhatsApp, LinkedIn) -->
-<meta property="og:title" content="DocToolsHub – Free Image & PDF Tools">
-<meta property="og:description" content="Resize, Compress & Convert Images and PDFs online – 100% Free">
-<meta property="og:image" content="https://amanish07.github.io/doctoolshub/assets/images/banner.png">
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://amanish07.github.io/doctoolshub">
-
-<!-- TWITTER / X SEO -->
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="DocToolsHub – Free Image & PDF Tools">
-<meta name="twitter:description" content="Resize, Compress & Convert Images and PDFs online – 100% Free">
-<meta name="twitter:image" content="https://amanish07.github.io/doctoolshub/assets/images/banner.png">
+  <!-- TWITTER / X SEO -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="ImageToolsOnline – Free Image & PDF Tools">
+  <meta name="twitter:description" content="Resize, Compress & Convert Images and PDFs online – 100% Free">
+  <meta name="twitter:image" content="https://amanish07.github.io/ImageToolsOnline/assets/images/ImageToolsOnlinebanner.png">
 
   <!-- CSS -->
   <link rel="stylesheet" href="assets/styles/main.css">
@@ -40,7 +35,7 @@
 
   <!-- HEADER -->
   <div class="hero">
-    <h1>All-in-One Document Tools</h1>
+    <h1>All-in-One Image & PDF Tools</h1>
     <p>Resize, Compress & Convert Images and PDFs – 100% Free</p>
   </div>
 
@@ -79,7 +74,7 @@
   <!-- SEO TEXT -->
   <div class="section">
     <div class="seo-text">
-      DocToolsHub is a free online document tools website where you can resize images,
+      ImageToolsOnline is a free online tools website where you can resize images,
       convert JPG to PDF, PDF to JPG and compress files easily. Our tools work on all
       devices and follow global document standards. No signup required.
     </div>
@@ -87,7 +82,7 @@
 
   <!-- FOOTER -->
   <footer>
-    DocToolsHub |
+    ImageToolsOnline |
     <a href="privacy.html">Privacy Policy</a> |
     <a href="terms.html">Terms</a> |
     <a href="contact.html">Contact</a>
