--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <meta name="twitter:image" content="https://imagetoolify.in/assets/images/ImageToolifyBanner.png">
   
   <!-- CSS -->
-  <link rel="stylesheet" href="assets/styles/main.css">
+  <link rel="stylesheet" href="/assets/styles/main.css">
 </head>
 
 <body>
@@ -52,8 +52,8 @@
   <nav class="nav-menu" id="navMenu">
     <a href="/">Home</a>
     <a href="/image-resizer">Image Resizer</a>
-    <a href="image-converter.html">Image Converter</a>
-    <a href="pdf-tools.html">PDF Tools</a>
+    <a href="/image-converter">Image Converter</a>
+    <a href="/pdf-tools">PDF Tools</a>
     <a href="about.html">About</a>
     <a href="faq.html">FAQ</a>
     <a href="contact.html">Contact</a>
@@ -79,7 +79,7 @@
         </div>
       </a>
       
-      <a href="pdf-tools.html" class="card-link">
+      <a href="/pdf-tools" class="card-link">
         <div class="card">
           <span>📄</span>
           <h3>PDF Tools</h3>
@@ -87,7 +87,7 @@
         </div>
       </a>
       
-      <a href="image-converter.html" class="card-link">
+      <a href="/image-converter" class="card-link">
         <div class="card">
           <span>🔁</span>
           <h3>Image Converter</h3>
