--- a/image-converter/index.html
+++ b/image-converter/index.html
@@ -24,12 +24,12 @@
   <meta name="twitter:image" content="https://imagetoolify.in/assets/images/ImageToolifyBanner.png">
 
   <!-- Favicon -->
-  <link rel="icon" href="assets/images/ImageToolifyLogo.png" type="image/png">
-  <link rel="apple-touch-icon" href="assets/images/ImageToolifyLogo.png">
-  <link rel="shortcut icon" href="assets/images/ImageToolifyLogo.png" type="image/png">
+  <link rel="icon" href="/assets/images/ImageToolifyLogo.png" type="image/png">
+  <link rel="apple-touch-icon" href="/assets/images/ImageToolifyLogo.png">
+  <link rel="shortcut icon" href="/assets/images/ImageToolifyLogo.png" type="image/png">
 
   <!-- CSS -->
-  <link rel="stylesheet" href="assets/styles/image-converter.css">
+  <link rel="stylesheet" href="/assets/styles/image-converter.css">
 </head>
 
 <body>
@@ -48,9 +48,9 @@
 
   <nav class="nav-menu" id="navMenu">
     <a href="/">Home</a>
-    <a href="image-resizer.html">Image Resizer</a>
-    <a href="image-converter.html">Image Converter</a>
-    <a href="pdf-tools.html">PDF Tools</a>
+    <a href="/image-resizer">Image Resizer</a>
+    <a href="/image-converter">Image Converter</a>
+    <a href="/pdf-tools">PDF Tools</a>
     <a href="about.html">About</a>
     <a href="faq.html">FAQ</a>
     <a href="contact.html">Contact</a>
@@ -86,7 +86,6 @@
     <img id="previewImg">
     <a id="download" class="btn">Download</a>
   </div>
-
 
   <!-- SEO CONTENT -->
   <div class="seo-box">
@@ -142,6 +141,6 @@
   </div>
 </footer>
 
-<script src="assets/scripts/image-converter.js"></script>
+<script src="/assets/scripts/image-converter.js"></script>
 </body>
 </html>
