--- a/pdf-tools.html
+++ b/pdf-tools.html
@@ -7,9 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Favicon -->
-  <link rel="icon" href="assets/images/ImageToolifyLogo.png" type="image/png">
-  <link rel="apple-touch-icon" href="assets/images/ImageToolifyLogo.png">
-  <link rel="shortcut icon" href="assets/images/ImageToolifyLogo.png" type="image/png">
+  <link rel="icon" href="/assets/images/ImageToolifyLogo.png" type="image/png">
+  <link rel="apple-touch-icon" href="/assets/images/ImageToolifyLogo.png">
+  <link rel="shortcut icon" href="/assets/images/ImageToolifyLogo.png" type="image/png">
 
   <!-- BASIC SEO -->
   <meta name="description" content="Free online Image to PDF and PDF to Image converter. Convert multiple images to PDF or extract images from PDF easily using imagetoolify.">
@@ -52,12 +52,12 @@
 
   <nav class="nav-menu" id="navMenu">
     <a href="/">Home</a>
-    <a href="image-resizer.html">Image Resizer</a>
-    <a href="image-converter.html">Image Converter</a>
-    <a href="pdf-tools.html">PDF Tools</a>
-    <a href="about.html">About</a>
-    <a href="faq.html">FAQ</a>
-    <a href="contact.html">Contact</a>
+    <a href="/image-resizer">Image Resizer</a>
+    <a href="/image-converter">Image Converter</a>
+    <a href="/pdf-tools">PDF Tools</a>
+    <a href="/about">About</a>
+    <a href="/faq">FAQ</a>
+    <a href="/contact">Contact</a>
   </nav>
 </header>
 
@@ -143,17 +143,17 @@
 <!-- FOOTER -->
 <footer>
   <div class="footer-links">
-    <a href="about.html">About Us</a> |
-    <a href="faq.html">FAQ</a> |
-    <a href="privacy-policy.html">Privacy Policy</a> |
-    <a href="terms.html">Terms</a> |
-    <a href="contact.html">Contact</a>
+    <a href="/about">About Us</a> |
+    <a href="/faq">FAQ</a> |
+    <a href="/privacy-policy">Privacy Policy</a> |
+    <a href="/terms">Terms</a> |
+    <a href="/contact">Contact</a>
   </div>
   <div class="footer-text">
     © 2026 imagetoolify.in — All Rights Reserved.
   </div>
 </footer>
 
-<script src="assets/scripts/PDF-tools.js"></script>
+<script src="/assets/scripts/PDF-tools.js"></script>
 </body>
 </html>
