--- a/pdf-tools/index.html
+++ b/pdf-tools/index.html
@@ -33,7 +33,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="assets/styles/PDF-tools.css">
+  <link rel="stylesheet" href="/assets/styles/PDF-tools.css">
 </head>
 
 <body>
