--- a/about.html
+++ b/about.html
@@ -10,8 +10,8 @@
   <meta name="keywords" content="about imagetoolify, image tools online, pdf tools, image resizer website">
 
   <!-- FAVICON -->
-  <link rel="icon" href="assets/images/ImageToolifyLogo.png" type="image/png">
-  <link rel="apple-touch-icon" href="assets/images/ImageToolifyLogo.png">
+  <link rel="icon" href="/assets/images/ImageToolifyLogo.png" type="image/png">
+  <link rel="apple-touch-icon" href="/assets/images/ImageToolifyLogo.png">
 
   <!-- OPEN GRAPH -->
   <meta property="og:title" content="About Us – imagetoolify">
@@ -27,7 +27,7 @@
   <meta name="twitter:image" content="https://imagetoolify.in/assets/images/ImageToolifyBanner.png">
 
   <!-- CSS -->
-  <link rel="stylesheet" href="assets/styles/about.css">
+  <link rel="stylesheet" href="/assets/styles/about.css">
 </head>
 
 <body>
@@ -41,12 +41,12 @@
   </div>
   <nav id="navMenu">
     <a href="/">Home</a>
-    <a href="image-resizer.html">Image Resizer</a>
-    <a href="image-converter.html">Image Converter</a>
-    <a href="pdf-tools.html">PDF Tools</a>
-    <a href="about.html">About</a>
-    <a href="faq.html">FAQ</a>
-    <a href="contact.html">Contact</a>
+    <a href="/image-resizer">Image Resizer</a>
+    <a href="/image-converter">Image Converter</a>
+    <a href="/pdf-tools">PDF Tools</a>
+    <a href="/about">About</a>
+    <a href="/faq">FAQ</a>
+    <a href="/contact">Contact</a>
   </nav>
 </header>
 
@@ -82,11 +82,11 @@
 <!-- FOOTER -->
   <footer>
     <div class="footer-links">
-      <a href="about.html">About Us</a> |
-      <a href="faq.html">FAQ</a> |
-      <a href="privacy-policy.html">Privacy Policy</a> |
-      <a href="terms.html">Terms</a> |
-      <a href="contact.html">Contact</a>
+      <a href="/about">About Us</a> |
+      <a href="/faq">FAQ</a> |
+      <a href="/privacy-policy">Privacy Policy</a> |
+      <a href="/terms">Terms</a> |
+      <a href="/contact">Contact</a>
     </div>
     <div class="footer-text">
       © 2026 imagetoolify.in — All Rights Reserved.
