--- a/faq.html
+++ b/faq.html
@@ -12,28 +12,36 @@
   <link rel="icon" href="assets/images/ImageToolifyLogo.png" type="image/png">
 
   <!-- CSS -->
-  <link rel="stylesheet" href="assets/styles/faq.css">
+  <link rel="stylesheet" href="/assets/styles/faq.css">
 </head>
 
 <body>
 
+  
+  
+  
+  
+<!-- ===== NAVBAR ===== -->
 <header class="navbar">
-  <div class="nav">
+  <div class="nav-container">
     <a href="/" class="logo">imagetoolify</a>
+
     <div class="menu-btn" id="menuBtn">
       <span></span><span></span><span></span>
     </div>
   </div>
-  <nav id="navMenu">
+
+  <nav class="nav-menu" id="navMenu">
     <a href="/">Home</a>
-    <a href="image-resizer.html">Image Resizer</a>
-    <a href="image-converter.html">Image Converter</a>
-    <a href="pdf-tools.html">PDF Tools</a>
-    <a href="about.html">About</a>
-    <a href="faq.html">FAQ</a>
-    <a href="contact.html">Contact</a>
+    <a href="/image-resizer">Image Resizer</a>
+    <a href="/image-converter">Image Converter</a>
+    <a href="/pdf-tools">PDF Tools</a>
+    <a href="/about">About</a>
+    <a href="/faq">FAQ</a>
+    <a href="/contact">Contact</a>
   </nav>
 </header>
+
 
 <div class="container">
   <h1>Frequently Asked Questions</h1>
@@ -67,11 +75,11 @@
 <!-- FOOTER -->
   <footer>
     <div class="footer-links">
-      <a href="about.html">About Us</a> |
-      <a href="faq.html">FAQ</a> |
-      <a href="privacy-policy.html">Privacy Policy</a> |
-      <a href="terms.html">Terms</a> |
-      <a href="contact.html">Contact</a>
+      <a href="/about">About Us</a> |
+      <a href="/faq">FAQ</a> |
+      <a href="/privacy-policy">Privacy Policy</a> |
+      <a href="/terms">Terms</a> |
+      <a href="/contact">Contact</a>
     </div>
     <div class="footer-text">
       © 2026 imagetoolify.in — All Rights Reserved.
@@ -79,6 +87,6 @@
   </footer>
   
 
-<script src="assets/scripts/faq.js"></script>
+<script src="/assets/scripts/faq.js"></script>
 </body>
 </html>
