--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -9,8 +9,8 @@
   <meta name="description" content="Privacy Policy of imagetoolify. Learn how we protect your data while using our image and PDF tools.">
 
   <!-- Favicon -->
-  <link rel="icon" href="assets/images/ImageToolifyLogo.png" type="image/png">
-  <link rel="apple-touch-icon" href="assets/images/ImageToolifyLogo.png">
+  <link rel="icon" href="/assets/images/ImageToolifyLogo.png" type="image/png">
+  <link rel="apple-touch-icon" href="/assets/images/ImageToolifyLogo.png">
 
   <!-- OPEN GRAPH -->
   <meta property="og:title" content="Privacy Policy – imagetoolify">
@@ -24,7 +24,7 @@
   <meta name="twitter:image" content="https://imagetoolify.in/assets/images/ImageToolifyBanner.png">
 
   <!-- CSS -->
-  <link rel="stylesheet" href="assets/styles/privacy-policy.css">
+  <link rel="stylesheet" href="/assets/styles/privacy-policy.css">
 </head>
 
 <body>
@@ -44,12 +44,12 @@
   <!-- MENU -->
   <nav class="nav-menu" id="navMenu">
     <a href="/">Home</a>
-    <a href="image-resizer.html">Image Resizer</a>
-    <a href="image-converter.html">Image Converter</a>
-    <a href="pdf-tools.html">PDF Tools</a>
-    <a href="about.html">About</a>
-    <a href="faq.html">FAQ</a>
-    <a href="contact.html">Contact</a>
+    <a href="/image-resizer">Image Resizer</a>
+    <a href="/image-converter">Image Converter</a>
+    <a href="/pdf-tools">PDF Tools</a>
+    <a href="/about">About</a>
+    <a href="/faq">FAQ</a>
+    <a href="/contact">Contact</a>
   </nav>
 </header>
   <div class="page">
@@ -101,11 +101,11 @@
   <!-- FOOTER -->
   <footer>
     <div class="footer-links">
-      <a href="about.html">About Us</a> |
-      <a href="faq.html">FAQ</a> |
-      <a href="privacy-policy.html">Privacy Policy</a> |
-      <a href="terms.html">Terms</a> |
-      <a href="contact.html">Contact</a>
+      <a href="/about">About Us</a> |
+      <a href="/faq">FAQ</a> |
+      <a href="/privacy-policy">Privacy Policy</a> |
+      <a href="/terms">Terms</a> |
+      <a href="/contact">Contact</a>
     </div>
     <div class="footer-text">
       © 2026 imagetoolify.in — All Rights Reserved.
@@ -114,6 +114,6 @@
 
 
 
-<script src="assets/scripts/privacy.js"></script>
+<script src="/assets/scripts/privacy.js"></script>
 </body>
 </html>
