--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
     <a href="/image-resizer">Image Resizer</a>
     <a href="/image-converter">Image Converter</a>
     <a href="/pdf-tools">PDF Tools</a>
-    <a href="about.html">About</a>
-    <a href="faq.html">FAQ</a>
-    <a href="contact.html">Contact</a>
+    <a href="/about">About</a>
+    <a href="/faq">FAQ</a>
+    <a href="/contact">Contact</a>
   </nav>
 </header>
 
@@ -144,11 +144,11 @@
   <!-- FOOTER -->
   <footer>
     <div class="footer-links">
-      <a href="about.html">About Us</a> |
-      <a href="faq.html">FAQ</a> |
-      <a href="privacy-policy.html">Privacy Policy</a> |
-      <a href="terms.html">Terms</a> |
-      <a href="contact.html">Contact</a>
+      <a href="/about">About Us</a> |
+      <a href="/faq">FAQ</a> |
+      <a href="/privacy-policy">Privacy Policy</a> |
+      <a href="/terms">Terms</a> |
+      <a href="/contact">Contact</a>
     </div>
     <div class="footer-text">
       © 2026 imagetoolify.in — All Rights Reserved.
