--- a/404.html
+++ b/404.html
@@ -26,12 +26,12 @@
   </div>
   <nav id="navMenu">
     <a href="/">Home</a>
-    <a href="image-resizer.html">Image Resizer</a>
-    <a href="image-converter.html">Image Converter</a>
-    <a href="pdf-tools.html">PDF Tools</a>
-    <a href="about.html">About</a>
-    <a href="faq.html">FAQ</a>
-    <a href="contact.html">Contact</a>
+    <a href="/image-resizer">Image Resizer</a>
+    <a href="/image-converter">Image Converter</a>
+    <a href="/pdf-tools">PDF Tools</a>
+    <a href="/about">About</a>
+    <a href="/faq">FAQ</a>
+    <a href="/contact">Contact</a>
   </nav>
 </header>
 
@@ -46,14 +46,14 @@
 
   <div class="actions">
     <a href="/" class="btn">Go to Home</a>
-    <a href="contact.html" class="btn outline">Contact Support</a>
+    <a href="/contact" class="btn outline">Contact Support</a>
   </div>
 </div>
 
 <footer>
   © 2026 imagetoolify.in — All Rights Reserved |
-  <a href="privacy-policy.html">Privacy Policy</a> |
-  <a href="terms.html">Terms</a>
+  <a href="/privacy-policy">Privacy Policy</a> |
+  <a href="/terms">Terms</a>
 </footer>
 
 <script src="assets/scripts/404.js"></script>
