--- a/image-resizer/index.html
+++ b/image-resizer/index.html
@@ -33,6 +33,9 @@
 
   <!-- jsPDF -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+
+  
+  <link rel="canonical" href="https://imagetoolify.in/image-resizer/">
 </head>
 
 <body>
