--- a/pdf-tools/index.html
+++ b/pdf-tools/index.html
@@ -34,6 +34,8 @@
 
   <!-- CSS -->
   <link rel="stylesheet" href="/assets/styles/PDF-tools.css">
+
+  <link rel="canonical" href="https://imagetoolify.in/pdf-tools/">
 </head>
 
 <body>
