--- a/faq/index.html
+++ b/faq/index.html
@@ -13,6 +13,9 @@
 
   <!-- CSS -->
   <link rel="stylesheet" href="/assets/styles/faq.css">
+
+
+  <link rel="canonical" href="https://imagetoolify.in/faq/">
 </head>
 
 <body>
