--- a/contact/index.html
+++ b/contact/index.html
@@ -24,6 +24,8 @@
 
   <!-- CSS -->
   <link rel="stylesheet" href="/assets/styles/contact.css">
+
+  <link rel="canonical" href="https://imagetoolify.in/contact/">
 </head>
 
 <body>
