--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -25,6 +25,9 @@
 
   <!-- CSS -->
   <link rel="stylesheet" href="/assets/styles/privacy-policy.css">
+
+
+  <link rel="canonical" href="https://imagetoolify.in/privacy-policy/">
 </head>
 
 <body>
