--- a/terms/index.html
+++ b/terms/index.html
@@ -25,6 +25,9 @@
 
   <!-- CSS -->
   <link rel="stylesheet" href="/assets/styles/terms.css">
+
+
+  <link rel="canonical" href="https://imagetoolify.in/terms/">
 </head>
 
 <body>
