--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <meta property="og:image" content="https://imagetoolify.in/assets/images/ImageToolifyBanner.png">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://imagetoolify.in/">
+  <meta property="og:site_name" content="ImageToolify">
   
   <!-- TWITTER / X -->
   <meta name="twitter:card" content="summary_large_image">
