--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <a href="/image-resizer">Image Resizer</a>
     <a href="/image-converter">Image Converter</a>
     <a href="/pdf-tools">PDF Tools</a>
-    <a href="/blog">Blog</a
+    <a href="/blog">Blog</a>
     <a href="/about">About</a>
     <a href="/faq">FAQ</a>
     <a href="/contact">Contact</a>
