--- a/faq/index.html
+++ b/faq/index.html
@@ -39,6 +39,7 @@
     <a href="/image-resizer">Image Resizer</a>
     <a href="/image-converter">Image Converter</a>
     <a href="/pdf-tools">PDF Tools</a>
+    <a href="/blog">Blog</a>
     <a href="/about">About</a>
     <a href="/faq">FAQ</a>
     <a href="/contact">Contact</a>
@@ -78,6 +79,7 @@
 <!-- FOOTER -->
   <footer>
     <div class="footer-links">
+      <a href="/blog">Blog</a> |
       <a href="/about">About Us</a> |
       <a href="/faq">FAQ</a> |
       <a href="/privacy-policy">Privacy Policy</a> |
