--- a/image-converter/index.html
+++ b/image-converter/index.html
@@ -54,6 +54,7 @@
     <a href="/image-resizer">Image Resizer</a>
     <a href="/image-converter">Image Converter</a>
     <a href="/pdf-tools">PDF Tools</a>
+    <a href="/blog">Blog</a>
     <a href="/about">About</a>
     <a href="/faq">FAQ</a>
     <a href="/contact">Contact</a>
@@ -133,6 +134,7 @@
 <!-- FOOTER -->
 <footer>
   <div class="footer-links">
+    <a href="/blog">Blog</a> |
     <a href="/about">About Us</a> |
     <a href="/faq">FAQ</a> |
     <a href="/privacy-policy">Privacy Policy</a> |
