--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -50,6 +50,7 @@
     <a href="/image-resizer">Image Resizer</a>
     <a href="/image-converter">Image Converter</a>
     <a href="/pdf-tools">PDF Tools</a>
+    <a href="/blog">Blog</a>
     <a href="/about">About</a>
     <a href="/faq">FAQ</a>
     <a href="/contact">Contact</a>
@@ -104,6 +105,7 @@
   <!-- FOOTER -->
   <footer>
     <div class="footer-links">
+      <a href="/blog">Blog</a> |
       <a href="/about">About Us</a> |
       <a href="/faq">FAQ</a> |
       <a href="/privacy-policy">Privacy Policy</a> |
