--- a/terms/index.html
+++ b/terms/index.html
@@ -52,6 +52,7 @@
     <a href="/image-resizer">Image Resizer</a>
     <a href="/image-converter">Image Converter</a>
     <a href="/pdf-tools">PDF Tools</a>
+    <a href="/blog">Blog</a>
     <a href="/about">About</a>
     <a href="/faq">FAQ</a>
     <a href="/contact">Contact</a>
@@ -122,6 +123,7 @@
   <!-- ✅ FOOTER -->
   <footer>
     <div class="footer-links">
+      <a href="/blog">Blog</a> |
       <a href="/about">About Us</a> |
       <a href="/faq">FAQ</a> |
       <a href="/privacy-policy">Privacy Policy</a> |
