--- a/image-resizer/index.html
+++ b/image-resizer/index.html
@@ -151,7 +151,9 @@
 
     <p>
       All processing happens inside your browser. Your images are never uploaded to any server,
-      ensuring complete privacy and security.
+      ensuring complete privacy and security.  <a href="/blog/how-to-resize-image/" class="custom-text-link">
+  read more
+      </a>
     </p>
   </div>
 </div>
