--- a/image-converter/index.html
+++ b/image-converter/index.html
@@ -126,7 +126,9 @@
 
     <p>
       The entire image conversion process happens locally in your browser. Your images
-      are never uploaded to any server, ensuring full privacy and security.
+      are never uploaded to any server, ensuring full privacy and security.  <a href="/blog/how-to-convert-jpg-to-png-png-to-jpg-jpeg-webp/" class="custom-text-link">
+  read more
+      </a>
     </p>
   </div>
 </div>
